<resources>
    <string name="app_name">IntercambioDeVideojuegos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bienvenido_al_sistema_de_intercambio_de_videojuegos">Bienvenido al sistema de intercambio de videojuegos</string>
    <string name="contrasenia">Contraseña</string>
    <string name="correo2">Correo</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>
    <string name="correo">Correo</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="completar_registro">Completar Registro</string>
    <string name="juegos_disponibles">Juegos Disponibles</string>
    <string name="textview">TextView</string>
    <string name="ofrecer_juegos">Ofrecer Juegos</string>
    <string name="juegos_ofrecidos">Juegos Ofrecidos</string>
    <string name="buscar_titulo">Buscar titulo</string>
    <string name="buscar">buscar</string>
    <string name="titulo">Titulo</string>
    <string name="consola">Consola</string>
    <string name="reservar">Reservar</string>
    <string name="presionar">presionar</string>
    <string name="solicitar">solicitar</string>
    <string name="direccion">Direccion</string>
    <string name="aqui_se_recojera_la_imagen">Aqui se recojera la imagen</string>
    <string name="ofrecer">Ofrecer</string>
    <string name="cargar_imagen_del_juego">Cargar imagen del juego</string>
    <string name="a_adir_imagen">Añadir imagen</string>
    <string name="imagen_a_adida">Imagen añadida</string>
    <string name="accion">accion</string>
    <string name="estado">Estado:</string>
    <string name="due_o">Dueño:</string>
    <string name="poner_nombre_y_apellido_del_due_o">Poner nombre y apellido del dueño</string>
    <string name="aceptar">aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="due_o2">Dueño</string>
    <string name="se_le_ha_enviado_un_correo_para_la_verificaci_n">Se le ha enviado un correo para la verificación</string>
    <string name="ya_verifique_mi_email">Ya verifique mi email</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="no_hay_ofertas_pendientes">No hay ofertas pendientes</string>
    <string name="ver_las_ofertas">Ver las ofertas</string>
    <string name="poner_mensaje_de_bienvenida_de_la_sesion">Poner Mensaje de bienvenida de la sesion</string>
    <string name="ver_todos_los_videojuegos">Ver todos los videojuegos</string>
    <string name="no_se_encontraron_resultados">No se encontraron resultados</string>
    <string name="recuperar">Recuperar</string>
    <string name="borrar">Borrar</string>
    <string name="detalles">Detalles</string>
    <string name="mostrar_puntos">Mostrar puntos</string>
    <string name="bienvenido">Bienvenido </string>
    <string name="selecionar_imagen">Selecionar imagen</string>
    <string name="no_presenta_juegos_ofrecidos">No presenta juegos ofrecidos</string>
</resources>