<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tituloVideojuegoOferta"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imagenVideojuegoOferta"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/videojuegoOfertaConsola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consola"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tituloVideojuegoOferta"
        app:layout_constraintStart_toStartOf="@+id/tituloVideojuegoOferta"
        app:layout_constraintTop_toBottomOf="@+id/tituloVideojuegoOferta" />

    <ImageView
        android:id="@+id/imagenVideojuegoOferta"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/presionar"
        app:layout_constraintBottom_toBottomOf="@+id/videojuegoOfertaConsola"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tituloVideojuegoOferta"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/aceptarVideojuegoOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="@+id/dueñoOferta"
        app:layout_constraintStart_toEndOf="@+id/direccionOferta"
        app:layout_constraintTop_toTopOf="@+id/direccionOferta" />

    <Button
        android:id="@+id/cancelarVideojuegoOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="@+id/aceptarVideojuegoOferta"
        app:layout_constraintStart_toEndOf="@+id/aceptarVideojuegoOferta"
        app:layout_constraintTop_toTopOf="@+id/aceptarVideojuegoOferta" />

    <TextView
        android:id="@+id/direccionOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/direccion"
        app:layout_constraintEnd_toEndOf="@+id/imagenVideojuegoOferta"
        app:layout_constraintStart_toStartOf="@+id/imagenVideojuegoOferta"
        app:layout_constraintTop_toBottomOf="@+id/imagenVideojuegoOferta" />

    <TextView
        android:id="@+id/dueñoOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/due_o2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/direccionOferta"
        app:layout_constraintStart_toStartOf="@+id/direccionOferta"
        app:layout_constraintTop_toBottomOf="@+id/direccionOferta" />

</androidx.constraintlayout.widget.ConstraintLayout>