<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tituloVideojuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imagenVideojuego"
        app:layout_constraintTop_toTopOf="@+id/imagenVideojuego" />

    <TextView
        android:id="@+id/videojuegoConsola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consola"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagenVideojuego"
        app:layout_constraintStart_toStartOf="@+id/tituloVideojuego" />

    <ImageView
        android:id="@+id/imagenVideojuego"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/presionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/accionVideojuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/solicitar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videojuegoConsola" />
</androidx.constraintlayout.widget.ConstraintLayout>