<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".general.Logueo">

    <EditText
        android:id="@+id/correoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bienvenido_al_sistema_de_intercambio_de_videojuegos"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contraseñaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/correoLogin"
        app:layout_constraintStart_toStartOf="@+id/correoLogin"
        app:layout_constraintTop_toBottomOf="@+id/correoLogin"
        android:autofillHints="" />

    <Button
        android:id="@+id/ingresarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ingresar"
        app:layout_constraintEnd_toEndOf="@+id/contraseñaLogin"
        app:layout_constraintStart_toStartOf="@+id/contraseñaLogin"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaLogin" />

    <TextView
        android:id="@+id/tvdfvds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/no_tienes_cuenta"
        app:layout_constraintEnd_toEndOf="@+id/ingresarLogin"
        app:layout_constraintStart_toStartOf="@+id/ingresarLogin"
        app:layout_constraintTop_toBottomOf="@+id/ingresarLogin" />

    <TextView
        android:id="@+id/registroLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:shadowColor="#000000"
        android:text="@string/registrate"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvdfvds"
        app:layout_constraintStart_toStartOf="@+id/tvdfvds"
        app:layout_constraintTop_toBottomOf="@+id/tvdfvds" />

</androidx.constraintlayout.widget.ConstraintLayout>