<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tituloVideojuegoOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imagenVideojuegoOferta"
        app:layout_constraintTop_toTopOf="@+id/imagenVideojuegoOferta" />

    <TextView
        android:id="@+id/videojuegoOfertaConsola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/consola"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagenVideojuegoOferta"
        app:layout_constraintStart_toEndOf="@+id/imagenVideojuegoOferta" />

    <ImageView
        android:id="@+id/imagenVideojuegoOferta"
        android:layout_width="75dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/presionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/aceptarVideojuegoOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/accion"
        app:layout_constraintBottom_toBottomOf="@+id/tv5006"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv5006" />

    <TextView
        android:id="@+id/tv5006"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/estado"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imagenVideojuegoOferta"
        app:layout_constraintStart_toStartOf="@+id/imagenVideojuegoOferta"
        app:layout_constraintTop_toBottomOf="@+id/imagenVideojuegoOferta" />

    <TextView
        android:id="@+id/estadoVideojuegoHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv5006"
        app:layout_constraintStart_toEndOf="@+id/tv5006"
        app:layout_constraintTop_toTopOf="@+id/tv5006" />
</androidx.constraintlayout.widget.ConstraintLayout>