<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.MenuUsuario">

    <Button
        android:id="@+id/juegosDisponiblesMenuU"
        android:layout_width="362dp"
        android:layout_height="111dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="24dp"
        android:text="@string/juegos_disponibles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenidaMenuUsuario" />

    <TextView
        android:id="@+id/bienvenidaMenuUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ofrecerJuegosMenuU"
        android:layout_width="362dp"
        android:layout_height="111dp"
        android:layout_marginTop="32dp"
        android:text="@string/ofrecer_juegos"
        app:layout_constraintEnd_toEndOf="@+id/juegosDisponiblesMenuU"
        app:layout_constraintStart_toStartOf="@+id/juegosDisponiblesMenuU"
        app:layout_constraintTop_toBottomOf="@+id/juegosDisponiblesMenuU" />

    <Button
        android:id="@+id/juegosOfrecidoMenuU"
        android:layout_width="362dp"
        android:layout_height="111dp"
        android:layout_marginTop="32dp"
        android:text="@string/juegos_ofrecidos"
        app:layout_constraintEnd_toEndOf="@+id/ofrecerJuegosMenuU"
        app:layout_constraintStart_toStartOf="@+id/ofrecerJuegosMenuU"
        app:layout_constraintTop_toBottomOf="@+id/ofrecerJuegosMenuU" />
</androidx.constraintlayout.widget.ConstraintLayout>