<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.MenuAdmin">

    <TextView
        android:id="@+id/bienvenidaAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/poner_mensaje_de_bienvenida_de_la_sesion"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonIrOfertas"
        android:layout_width="340dp"
        android:layout_height="138dp"
        android:layout_marginTop="32dp"
        android:text="@string/ver_las_ofertas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenidaAdmin" />

    <Button
        android:id="@+id/botonListarTodosVideojuegos"
        android:layout_width="340dp"
        android:layout_height="138dp"
        android:layout_marginTop="32dp"
        android:text="@string/ver_todos_los_videojuegos"
        app:layout_constraintEnd_toEndOf="@+id/botonIrOfertas"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/botonIrOfertas"
        app:layout_constraintTop_toBottomOf="@+id/botonIrOfertas" />
</androidx.constraintlayout.widget.ConstraintLayout>