<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.JuegosDisponibles">

    <EditText
        android:id="@+id/filtroTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/buscar_titulo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/juegos_disponibles"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buscarTituloDisponible"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/buscar"
        app:layout_constraintBottom_toBottomOf="@+id/filtroTitulo"
        app:layout_constraintStart_toEndOf="@+id/filtroTitulo"
        app:layout_constraintTop_toTopOf="@+id/filtroTitulo"
        app:srcCompat="@drawable/lupa" />

    <Spinner
        android:id="@+id/buscarConsola"
        android:layout_width="329dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filtroTitulo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaJuegosDisponiblesU"
        android:layout_width="409dp"
        android:layout_height="555dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscarConsola" />
</androidx.constraintlayout.widget.ConstraintLayout>